Style scheduler with Windows 7 theme

--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,8 @@
         <meta property="og:image" content="/img/social-preview.png">
         <!-- End Open Graph Tags -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#2563eb">
+        <link rel="manifest" href="/manifest.json">
         <link rel="stylesheet" href="css/index.css">
         <link rel="icon" href="" id="favicon">
         <script src="./script/particles.js"></script>
